# youtube-downloader

./: .gitignore  manage.py  pyproject.toml  requirements.txt
youtube_downloader/: urls.py  views.py
youtube_downloader/templates/: youtube.html  youtube1.html
youtube_project/: asgi.py  settings.py  urls.py  wsgi.py
