[tool.poetry]
name = "youtube-project1"
version = "0.1.0"
description = ""
authors = ["rahul  <you@example.com>"]
readme = "README.md"
packages = [{include = "youtube_project"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
